test-a/namespace.yaml
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ms
  labels:
    istio-injection: enabled
