test-a/service-a-deployment.yaml
# service-a-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  namespace: ms
spec:
  replicas: 6
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
      - name: service-a
        image: localhost:5000/service-a:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: ms
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30060
  selector:
    app: service-a
